--- a/myapp/templates/booking.html
+++ b/myapp/templates/booking.html
@@ -1,6 +1,6 @@
 
 
-<form action = "" method = "post", style="background-color:lightskyblue;">
+<form action = "" method = "post", style="background-color:lightcyan;">
     <p style="color:red;">  Booking for Little Lemon ! </p>
     {% csrf_token %}
     {{ form.as_p }}
