--- a/myapp/templates/booking_success.html
+++ b/myapp/templates/booking_success.html
@@ -1,10 +1,11 @@
 <html>
     <head>
-        <title>Booking Details</title>
+        <title>Booking Success</title>
 
     </head>
     <body>
-        <h2>Booking Details</h2>
+        <h2 style="color: purple;">Booking Created Successfully!</h2>
+        <h3 style="text-decoration:underline;">Booking Details</h3>
         <p><b>First Name:</b> {{booking.first_name}}</p>
         <p><b>Last Name:</b> {{booking.last_name}}</p>
         <p><b>Guest Count: </b>{{booking.guest_count}}</p>
